--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 
 	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
 
-	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a>, <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text">Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s RSS feed</a>.</small>
+	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a>, or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s RSS feed</a>.</small>
 
 	<header>
 		<p class="header-path">
@@ -122,7 +122,7 @@
 					<td id="Card-PersonalWebsite-Alt" onclick="copyEvent('Card-PersonalWebsite-Alt')" title="Click to copy personal website to clipboard."><a rel="author" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-text">uva.nl/en/profile/f.n.vandervlist/</a></td>
 				</tr>
 				<tr>
-					<th><span class="is-emoji">&#x1d54f;</span>(Twitter)</th>
+					<th>&#x1d54f; (Twitter)</th>
 					<td id="Card-Twitter" onclick="copyEvent('Card-Twitter')" title="Click to copy &#x1d54f; (Twitter) handle to clipboard."><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#64;fvandervlist</a></td>
 				</tr>
 			</table>
@@ -149,12 +149,12 @@
 			<ul>						
 				<li><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a></li>
 				<li><a rel="external author" target="_blank" href="https://uva.academia.edu/fvandervlist" class="ahref-text">Academia</a></li>
-				<li><a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text">Bluesky</a></li>
+				<li><a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.fb.com/fernando.vandervlist" class="ahref-text">Facebook</a></li>
 				<li><a rel="external author" target="_blank" href="https://github.com/fvandervlist" class="ahref-text">GitHub</a></li>
-				<li><a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a></li>
+				<li><a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a></li>
-				<li><a rel="external author" target="_blank" href="https://aoir.social/@fvandervlist" class="ahref-text">Mastodon</a></li>
+				<li><a rel="external author" target="_blank" href="https://aoir.social/@fvandervlist" class="ahref-text"><span class="is-emoji">&#x1f418;</span>Mastodon</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.threads.net/@fvandervlist" class="ahref-text">Threads</a></li>
 				<li><a rel="external author" target="_blank" href="https://osf.io/m6dt9/" class="ahref-text">Open Science Framework</a></li>
 				<li><a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">ORCID</a></li>
@@ -191,7 +191,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ORCID ID: <a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">0000-0003-1401-0325</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Staff Profile: <a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-text">uva.nl/en/profile/f.n.vandervlist/</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/about.html" class="path ahref-text">About</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-11-12</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-14</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -264,8 +264,8 @@
 				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Last modified:</span>
-			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 12, 2024</span>
+			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
+			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 14, 2024</span>
 		</p>
 	</footer>
 
