--- a/links-and-resources/index.html
+++ b/links-and-resources/index.html
@@ -22,6 +22,7 @@
 	<title>Index of links-and-resources/ &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Index of links-and-resources/ &ndash; fernandovandervlist.nl" />
+	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		Links and Resources" />
 	<meta name="author" content="F. N. van der Vlist" />
