--- a/research/index.html
+++ b/research/index.html
@@ -22,6 +22,7 @@
 	<title>Index of research/ &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Index of research/ &ndash; fernandovandervlist.nl" />
+	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		Research" />
 	<meta name="author" content="F. N. van der Vlist" />
@@ -491,7 +492,8 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1354-8565" class="ahref-uri">1354-8565</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1748-7382" class="ahref-uri">1748-7382</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ASI Tools: <a rel="external" target="_blank" href="https://appstudies.org/research-output/tools/" class="ahref-text">appstudies.org/tools</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span></td>
+						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=9939806236115202617" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/digital-methods-for-sensory-media-research.html" class="path ahref-text">Digital Methods for Sensory Media Research</a></td>
 					<td class="td-datemodified"><span class="is-date">2024-04-17</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -1171,7 +1173,8 @@
 				</tr>
 				<tr class="tr-item y2013">
 					<td class="td-icon"></td>
-					<td class="td-link"><a rel="internal" href="/research/a-technicity-of-collaboration.html" class="path ahref-text">a-technicity-of-collaboration.html</a></td>
+					<td class="td-link"><a rel="internal" href="/research/a-technicity-of-collaboration.html" class="path ahref-text">a-technicity-of-collaboration.html</a><br />
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3168435795444836130" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/a-technicity-of-collaboration.html" class="path ahref-text"><i>A Technicity of Collaboration</i></a></td>
 					<td class="td-datemodified"><span class="is-date">2013-05-22</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f393; Degree">&#x1f393; &#x1f4c4;</span>Thesis &boxv; <span class="is-emoji" title="&#x1f4dc; Nominated"><a rel="internal" href="/about.html#Accomplishments-Awards-Honours" class="anchor ahref-emoji">&#x1f4dc;</a><br /></span></td>
