--- a/research/multi-situated-app-studies.html
+++ b/research/multi-situated-app-studies.html
@@ -395,7 +395,7 @@
 				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Last modified:</span>
+			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
 			<span class="is-emoji">&#x1f553;</span><span class="is-date">June 6, 2019</span>
 		</p>
 	</footer>
