--- a/research/the-nationality-of-apps.html
+++ b/research/the-nationality-of-apps.html
@@ -333,7 +333,8 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1354-8565" class="ahref-uri">1354-8565</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1748-7382" class="ahref-uri">1748-7382</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ASI Tools: <a rel="external" target="_blank" href="https://appstudies.org/research-output/tools/" class="ahref-text">appstudies.org/tools</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span></td>
+						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=9939806236115202617" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/digital-methods-for-sensory-media-research.html" class="path ahref-text">Digital Methods for Sensory Media Research</a></td>
 					<td class="td-datemodified"><span class="is-date">2024-04-17</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -619,7 +620,7 @@
 				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Last modified:</span>
+			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
 			<span class="is-emoji">&#x1f553;</span><span class="is-date">May 31, 2024</span>
 		</p>
 	</footer>
