--- a/gallery.html
+++ b/gallery.html
@@ -22,6 +22,7 @@
 	<title>Gallery &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Gallery &ndash; fernandovandervlist.nl" />
+	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		Gallery" />
 	<meta name="author" content="F. N. van der Vlist" />
@@ -68,6 +69,8 @@
 	<section class="header-bg"></section>
 
 	<small class="is-comment header-note"><b><span class="is-emoji">&#x26a0;</span>Note:</b> This website uses mouse-over (hover) effects and is best viewed on a wider screen (&ge; 1024px).</small>
+
+	<small class="is-comment header-note-connect"><b><span class="is-emoji">&#x1f4ac;</span>Connect:</b> Please <a rel="internal" href="/contact.html" class="path ahref-text is-reference">reach out to me via email</a>. You can stay updated on my latest research and work by following me on <a rel="internal" href="/contact.html#External-Links" class="path anchor ahref-text is-reference">social media</a> (including <a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a>, <a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text"><span class="is-emoji">&#x1f98b;</span>Bluesky</a>, <a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a>), <a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text"><span class="is-emoji">&#x1f393;</span>Google Scholar</a>, or by subscribing to <a rel="alternate" type="application/rss+xml" href="/Resources/feed.xml" class="path ahref-text">this website&rsquo;s RSS feed</a>.</small>
 
 	<header>
 		<p class="header-path">
@@ -137,7 +140,8 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1354-8565" class="ahref-uri">1354-8565</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1748-7382" class="ahref-uri">1748-7382</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ASI Tools: <a rel="external" target="_blank" href="https://appstudies.org/research-output/tools/" class="ahref-text">appstudies.org/tools</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span></td>
+						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=9939806236115202617" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/digital-methods-for-sensory-media-research.html" class="path ahref-text">Digital Methods for Sensory Media Research</a></td>
 					<td class="td-datemodified"><span class="is-date">2024-04-17</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -738,7 +742,8 @@
 						<img src="/Resources/images/a-technicity-of-collaboration/a-technicity-of-collaboration%3Fmode%3Drgb%26w%3D800%26res%3D72%26fig%3D20.png" />
 						<img src="/Resources/images/a-technicity-of-collaboration/a-technicity-of-collaboration%3Fmode%3Drgb%26w%3D800%26res%3D72%26fig%3D21.png" />
 					</a></td>
-					<td class="td-link"><a rel="internal" href="/research/a-technicity-of-collaboration.html" class="path ahref-text">a-technicity-of-collaboration.html</a></td>
+					<td class="td-link"><a rel="internal" href="/research/a-technicity-of-collaboration.html" class="path ahref-text">a-technicity-of-collaboration.html</a><br />
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3168435795444836130" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/a-technicity-of-collaboration.html" class="path ahref-text"><i>A Technicity of Collaboration</i></a></td>
 					<td class="td-datemodified"><span class="is-date">2013-05-22</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f393; Degree">&#x1f393; &#x1f4c4;</span>Thesis &boxv; <span class="is-emoji" title="&#x1f4dc; Nominated"><a rel="internal" href="/about.html#Accomplishments-Awards-Honours" class="anchor ahref-emoji">&#x1f4dc;</a><br /></span></td>
