--- a/research/diaspora-and-mapping-methodologies.html
+++ b/research/diaspora-and-mapping-methodologies.html
@@ -306,7 +306,7 @@
 				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Last modified:</span>
+			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
 			<span class="is-emoji">&#x1f553;</span><span class="is-date">December 5, 2018</span>
 		</p>
 	</footer>
