--- a/research/store-interface-package-connection.html
+++ b/research/store-interface-package-connection.html
@@ -373,7 +373,7 @@
 				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Last modified:</span>
+			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
 			<span class="is-emoji">&#x1f553;</span><span class="is-date">August 30, 2018</span>
 		</p>
 	</footer>
