--- a/research/studying-sociocultural-networks.html
+++ b/research/studying-sociocultural-networks.html
@@ -200,7 +200,7 @@
 				<span class="legend-value"><input type="checkbox" id="toggleExpands" title="Unfold additional information (if applicable)" /> Unfolds</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Last modified:</span>
+			<span class="legend-field"><span class="legend-key">&#x1f553; </span>Last modified:</span>
 			<span class="is-emoji">&#x1f553;</span><span class="is-date">January 11, 2013</span>
 		</p>
 	</footer>
