--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta name="title" content="Index of / &ndash; fernandovandervlist.nl" />
 	<meta name="description" content="Fernando van der Vlist, PhD, is a scholar, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
-		University of Amsterdam (UvA), Media Studies, Humanities, Amsterdam School for Cultural Analysis (ASCA), Amsterdam Institute for Humanities Research (AIHR), 
+		University of Amsterdam (UvA), Media Studies, Social Sciences and Humanities (SSH), Amsterdam School for Cultural Analysis (ASCA), Amsterdam Institute for Humanities Research (AIHR), 
 		App Studies Initiative (ASI), Digital Methods Initiative (DMI), Public Data Lab, 
 		Media Studies, Critical Data and Artificial Intelligence, Archival Information and Digital Humanities, New Media and Digital Culture, Media and Culture Studies, Graphic Design, 
 		Utrecht University (UU), Focus Area &lsquo;Governing the Digital Society&rsquo; (GDS), University of Siegen (Uni-Siegen), DFG Collaborative Research Centre 1187 &lsquo;Media of Cooperation&rsquo; (DFG SFB 1187), Utrecht Data School (UDS), Mind Design, The World as Flatland, Willem de Kooning Academy (WdKA), Rotterdam University of Applied Sciences (RUAS), 
@@ -119,7 +119,7 @@
 			<hr class="solid" />
 			<h6 class="byline areas keywords">
 				<span class="byline-field">Field:</span>
-				<span class="discipline"><span class="is-emoji">&#x1f4cd;</span>Media Studies (Humanities)</span>
+				<span class="discipline"><span class="is-emoji">&#x1f4cd;</span>Media Studies (Social Sciences and Humanities)</span>
 				&boxv;
 				<span class="byline-field">Areas:</span>
 				<span class="discipline-area"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:internet_studies">Internet Studies</a></span>
@@ -215,7 +215,7 @@
 						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://appstudies.org/research-output/publications/asi-sprint-report-series/" class="ahref-uri">appstudies.org</a><br /></span></td>
 					<td class="td-description"><i>The Nationality of Apps</i>, <i>ASI Sprint Report Series</i> &num;1</td>
 					<td class="td-datemodified"><span class="is-date">2024-05-31</span></td>
-					<td class="td-kind"><span class="is-emoji">&#x1f4d7;</span>Report</td>
+					<td class="td-kind"><span class="is-emoji">&#x1f4d7;</span>Sprint Report</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2024">
